fix(webapp): align code block in note inbox with surrounding

--- a/webapp/src/app/component/zettelkasten/zettelkasten.component.scss
+++ b/webapp/src/app/component/zettelkasten/zettelkasten.component.scss
@@ -52,7 +52,7 @@
 
 .markdown-border {
   border: var(--border-width) solid rgba(204, 204, 204, 0.4);
-  padding: 16px;
+  padding: 16px 24px;
   box-shadow: var(--inbox-note-box-shadow);
 }
 
